--- a/aintnowiki/anw/templates/page.html
+++ b/aintnowiki/anw/templates/page.html
@@ -11,5 +11,18 @@
                 <a href="{% url 'tags' tag %}" class="btn btn-outline-secondary">{{ tag }}</a>
             {% endfor %}
         </div>
+
+        {% if carousel %}
+            <div class="card-deck">
+                {% for p in carousel %}
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="card-title">{{ p }}</div>
+                            <div class="card-body">{{ p.meta_description }}</div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
