--- a/aintnowiki/anw/static/anw.css
+++ b/aintnowiki/anw/static/anw.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #eeeeee;
+    background-color: #f5f5f5;
     background-image: -moz-repeating-linear-gradient(-45deg, transparent, transparent 25px, rgba(255,255,255,1) 25px, rgba(255,255,255,1) 50px);
     background-image: -webkit-repeating-linear-gradient(-45deg, transparent, transparent 25px, rgba(255,255,255,1) 25px, rgba(255,255,255,1) 50px);
     background-image: -o-repeating-linear-gradient(-45deg, transparent, transparent 25px, rgba(255,255,255,1) 25px, rgba(255,255,255,1) 50px);
@@ -8,6 +8,10 @@ body {
     min-height: 100vh;
 }
 
-.container {
-    background: #fff;
-}
+/* FONT WEIGHTS FOR TAG CLOUD*/
+.cloud-1 {font-size: 80%;}
+.cloud-2 {font-size: 90%;}
+.cloud-3 {font-size: 100%;}
+.cloud-4 {font-size: 120%;}
+.cloud-5 {font-size: 150%;}
+.cloud-6 {font-size: 170%; font-weight: bold;}
