--- a/aintnowiki/anw/templates/base.html
+++ b/aintnowiki/anw/templates/base.html
@@ -4,7 +4,7 @@
 <body>
     {% include 'base_navigation.html' %}
 
-    <div class="container">
+    <div class="container mt-3 mb-3">
         <div class="row">
             <div class="col-xs"></div>
             <div class="col">
@@ -14,7 +14,6 @@
             <div class="col-xs"></div>
         </div>
     </div>
-
     {% include 'base_footer.html' %}
 </body>
 </html>
