--- a/aintnowiki/anw/templates/base_navigation.html
+++ b/aintnowiki/anw/templates/base_navigation.html
@@ -1,11 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">pritschet.me</a>
+{% load get_nav_tree %}
+
+{% get_navigation_tree as navigation %}
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
+  <a class="navbar-brand" href="{% url 'anw-home' %}">pritschet.me</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+
         {% for item in navigation %}
             {% if item.children %}
                 <li class="nav-item nav-fill dropdown">
@@ -13,6 +18,7 @@
                       {{ item.title }}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_{{ item.slug }}">
+                            <a class="dropdown-item" href="{% url 'anw-page' item.slug %}">{{ item.title }}</a>
                         {% for child in item.children %}
                             <a class="dropdown-item" href="{% url 'anw-page' child.slug %}">{{ child.title }}</a>
                         {% endfor %}
