--- a/aintnowiki/anw/templates/index.html
+++ b/aintnowiki/anw/templates/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         {% tags_for_object object as object_tags %}
         {% for tag in object_tags %}
-            <a href="{% url 'tags' tag %}" class="btn btn-outline-secondary m-2">{{ tag }}</a>
+            <a href="{% url 'tags' tag %}" class="btn btn-secondary m-2 shadow">{{ tag }}</a>
         {% endfor %}
     </div>
 
@@ -28,22 +28,7 @@
             <div class="container mt-3 mb-3">
                 <div class="card-deck">
                     {% for p in carousel %}
-                        <div class="card shadow">
-                            <div class="card-header">
-                                <a href="{% url 'anw-page' p.slug %}">{{ p }}</a>
-                            </div>
-                            <div class="card-body">
-                                <p class="card-text">{{ p.meta_description }}</p>
-                            </div>
-                            <div class="card-footer">
-                                {% tags_for_object p as object_tags %}
-                                {% for tag in object_tags %}
-                                    <a href="{% url 'tags' tag %}" class="btn btn-outline-secondary m-2">{{ tag }}</a>
-                                {% empty %}
-                                     <span class="btn m-2 hidden">&nbsp</span>
-                                {% endfor %}
-                            </div>
-                        </div>
+                        {% include 'page/page_card.html' %}
                     {% endfor %}
                 </div>
             </div>
