--- a/aintnowiki/anw/templates/base_head.html
+++ b/aintnowiki/anw/templates/base_head.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!--link rel="stylesheet" href="{% static 'bootstrap.min.css' %}"-->
-    <link rel="stylesheet" href="{% static 'anw.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'anw.css' %}">
 
     <script
 			  src="https://code.jquery.com/jquery-3.3.1.min.js"
