--- a/aintnowiki/anw/templates/object_list.html
+++ b/aintnowiki/anw/templates/object_list.html
@@ -23,7 +23,7 @@
             <h2>Results</h2>
             <div class="card-columns">
                 {% for p in object_list %}
-                    {% include 'page/page_card.html' %}
+                    {% include 'object_list/object_card.html' %}
                 {% endfor %}
             </div>
         {% endif %}
