--- a/aintnowiki/anw/templates/base.html
+++ b/aintnowiki/anw/templates/base.html
@@ -6,7 +6,10 @@
 
     <div class="container mt-3 mb-3">
         <div class="row">
-            <div class="col-xs"></div>
+            <div class="col-xs">
+                {% block sidebar %}
+                {% endblock %}
+            </div>
             <div class="col">
                 {% block content %}
                 {% endblock %}
