--- a/aintnowiki/anw/templates/base_navigation.html
+++ b/aintnowiki/anw/templates/base_navigation.html
@@ -3,7 +3,7 @@
 
 {% get_navigation_tree as navigation %}
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow sticky-top">
   <a class="navbar-brand" href="{% url 'anw-home' %}">pritschet.me</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
