--- a/aintnowiki/anw/templates/index.html
+++ b/aintnowiki/anw/templates/index.html
@@ -4,7 +4,7 @@
 {% load render_carousel %}
 
 {% block content %}
-    <div class="container">
+    <div class="container bg-white rounded p-3 shadow">
         {{ object.body|safe }}
     </div>
 
