--- a/aintnowiki/anw/templates/object_list.html
+++ b/aintnowiki/anw/templates/object_list.html
@@ -5,14 +5,15 @@
      {% if form %}
         <div class="container">
             <div class="col-6 mx-auto">
-                <form action="{% url 'anw-search' %}" method="get" class="form-inline">
-                    {% csrf_token %}
+                <form action="{% url 'anw-search' %}" method="get" class="form-inline justify-content-center">
                     {% bootstrap_field form.searchstring show_label=False show_help=False size="large" %}
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
     {% endif %}
+
+    {% include 'object_list/pagination_mixin.html' %}
 
     <div class="container">
         {% if tag %}
@@ -35,4 +36,6 @@
             {% endfor %}
         {% endif %}
     </div>
+
+    {% include 'object_list/pagination_mixin.html' %}
 {% endblock %}
