--- a/aintnowiki/anw/templates/base_head.html
+++ b/aintnowiki/anw/templates/base_head.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="Content-Script-Type" content="text/javascript">
-    <meta name="author" content="Andreas Pritschet <andreas@pritschet.me>">
+    <meta name="author" content="Andreas Hasenkopf <andreas@hasenkopf.xyz>">
     <meta name="robots" content="index,follow">
     <meta name="viewport" content="width=device-width; initial-scale=1.0;"/>
 
