Cleanup search, hide headlines in collapsible

--- a/aintnowiki/anw/templates/base_navigation.html
+++ b/aintnowiki/anw/templates/base_navigation.html
@@ -31,8 +31,10 @@
         {% endfor %}
     </ul>
     <form class="form-inline my-2 my-lg-0" method="get" action="{% url 'anw-search' %}">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="searchstring">
-        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+        <input class="form-control mr-sm-2 rounded bg-secondary" type="search" placeholder="Search" aria-label="Search" name="searchstring">
+        <button class="btn btn-outline-light my-2 my-sm-0 rounded" type="submit">
+            <span class="fa fa-search"></span>
+        </button>
     </form>
   </div>
 </nav>
