--- a/aintnowiki/anw/templates/object_list.html
+++ b/aintnowiki/anw/templates/object_list.html
@@ -4,12 +4,18 @@
 {% block content %}
      {% if form %}
         <div class="container">
-            <div class="col-6 mx-auto">
-                <form action="{% url 'anw-search' %}" method="get" class="form-inline justify-content-center">
-                    {% bootstrap_field form.searchstring show_label=False show_help=False size="large" %}
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
+            <form action="{% url 'anw-search' %}" method="get">
+                <div class="form-row align-items-center">
+                    <div class="col-auto my-1">
+                        {{ form.searchstring }}
+                    </div>
+                    <div class="col-auto my-1">
+                        <button type="submit" class="btn btn-primary rounded">
+                            <span class="fa fa-search"></span>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
     {% endif %}
 
