--- a/aintnowiki/anw/templates/object_list/pagination_mixin.html
+++ b/aintnowiki/anw/templates/object_list/pagination_mixin.html
@@ -5,11 +5,11 @@
             <ul class="pagination pagination-lg justify-content-center">
                 {% if page_obj.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if form.searchstring %}&searchstring={{ form.searchstring.value|urlencode }}{% endif %}">Previous</a>
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if form.searchstring %}&searchstring={{ form.searchstring.value|urlencode }}{% endif %}"><span class="fa fa-angle-double-left"></span></a>
                     </li>
                 {% else %}
                     <li class="page-item disabled">
-                        <a class="page-link">Previous</a>
+                        <a class="page-link"><span class="fa fa-angle-double-left"></span></a>
                     </li>
                 {% endif %}
                 {% for num in paginator.page_range %}
@@ -19,11 +19,11 @@
                 {% endfor %}
                 {% if page_obj.has_next %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if form.searchstring %}&searchstring={{ form.searchstring.value|urlencode }}{% endif %}">Next</a>
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if form.searchstring %}&searchstring={{ form.searchstring.value|urlencode }}{% endif %}"><span class="fa fa-angle-double-right"></span></a>
                     </li>
                 {% else %}
                     <li class="page-item disabled">
-                        <a class="page-link">Next</a>
+                        <a class="page-link"><span class="fa fa-angle-double-right"></span></a>
                     </li>
                 {% endif %}
             </ul>
