--- a/aintnowiki/anw/templates/page.html
+++ b/aintnowiki/anw/templates/page.html
@@ -3,9 +3,6 @@
 {% load render_carousel %}
 
 {% block sidebar %}
-    <div id="scrollspy" class="list-group pt-5 mt-5">
-    </div>
-
     <script>
         $(function() {
             function Generator() {};
@@ -25,15 +22,34 @@
 {% endblock %}
 
 {% block content %}
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            {% for crumb in object.get_breadcrumbs %}
+    <div class="d-flex justify-content-between">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb shadow rounded">
                 <li class="breadcrumb-item" aria-current="page">
-                    <a href="{% url 'anw-page' crumb.slug %}">{{ crumb }}</a>
+                    <a href="{ url 'anw-home' %}"><span class="fa fa-home"></span></a>
                 </li>
-            {% endfor %}
-        </ol>
-    </nav>
+                {% for crumb in object.get_breadcrumbs %}
+                    <li class="breadcrumb-item" aria-current="page">
+                        <a href="{% url 'anw-page' crumb.slug %}">{{ crumb }}</a>
+                    </li>
+                {% endfor %}
+            </ol>
+        </nav>
+        <nav class="navbar">
+            <button class="navbar-toggler border rounded bg-light shadow"
+                    type="button" data-toggle="collapse"
+                    data-target="#subnavSupportedContent"
+                    aria-controls="subnavSupportedContent" aria-expanded="false"
+                    aria-label="Toggle subnavigation">
+                <span class="fas fa-bars"></span>
+            </button>
+        </nav>
+    </div>
+
+    <div class="collapse" id="subnavSupportedContent">
+        <div id="scrollspy" class="list-group"></div>
+    </div>
+
     <div class="container p-3 bg-white rounded shadow">
 
         {{ object.body|safe }}
