--- a/aintnowiki/anw/templates/base_navigation.html
+++ b/aintnowiki/anw/templates/base_navigation.html
@@ -11,7 +11,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item nav-fill"><a href="{% url 'anw-images' %}" class="nav-link">Gallery</a></li>
+        <!-- li class="nav-item nav-fill"><a href="{% url 'anw-images' %}" class="nav-link">Gallery</a></li -->
         {% for item in navigation %}
             {% if item.children %}
                 <li class="nav-item nav-fill dropdown">
