--- a/aintnowiki/wiki/templates/wiki.html
+++ b/aintnowiki/wiki/templates/wiki.html
@@ -4,6 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% if noindex %}
+            <meta name="robots" content="noindex">
+        {% endif %}
         <title>{% block title %}{{ object.title|default:"Ain't no title" }}{% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
               rel="stylesheet"
