--- a/aintnowiki/wiki/templates/wiki.html
+++ b/aintnowiki/wiki/templates/wiki.html
@@ -30,7 +30,7 @@
     </script>
     <script type="text/x-template" id="tagnav-template">
         <div>
-            <div class="btn-group float-start mt-2 me-2" role="group"
+            <div class="btn-group float-start mt-2 me-2" role="group" style="width: 100%;"
                  v-bind:aria-label="item.tag.name">
                 <input type="checkbox" class="btn-check" v-bind:id="item.tag.slug"
                        autocomplete="off">
@@ -54,7 +54,7 @@
         </div>
     </script>
     <script type="text/x-template" id="viewer-template">
-        <div class="container pt-3" id="wiki-viewer"
+        <div class="container pt-3 mt-3 shadow" id="wiki-viewer"
              v-bind:class="[hidden ? 'visually-hidden': '']">
             <div class="float-end">
                 <a v-bind:href="item.url" class="btn btn-secondary" title="Direct link">
@@ -79,7 +79,7 @@
     <script type="text/x-template" id="list-template">
         <div class="container" id="wiki-list" ref="WikiList"
              v-bind:class="[visible ? '': 'visually-hidden']">
-            <div class="card mt-3" v-for="item in items" :key="item.id">
+            <div class="card mt-3 shadow" v-for="item in items" :key="item.id">
                 <div class="card-header">
                     <a v-bind:href="item.url" v-on:click="loadPage" v-bind:data-url="item.apiurl">
                         {{ item.title }}
@@ -97,7 +97,7 @@
                     </tag-item>
                 </div>
             </div>
-            <div class="d-flex justify-content-center mt-3 wiki-list-spinner" ref="Spinner"
+            <div class="d-flex justify-content-center mt-5 wiki-list-spinner" ref="Spinner"
                  v-bind:class="[showSpinner ? '': 'visually-hidden']">
                 <div class="spinner-border text-secondary shadow" role="status"
                      style="height: 2.5rem; width: 2.5rem;">
@@ -375,7 +375,7 @@
 </head>
 <body>
 <div class="container-fluid p-0" id="app">
-    <nav class="navbar navbar-dark navbar-expand bg-primary sticky-top">
+    <nav class="navbar navbar-dark navbar-expand bg-primary sticky-top shadow">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">{{ BRAND_HTML|safe }}</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
