--- a/aintnowiki/wiki/static/scss/anw_theme.scss
+++ b/aintnowiki/wiki/static/scss/anw_theme.scss
@@ -1,25 +1,28 @@
 @use "sass:map";
 @import "../../../../node_modules/bootstrap/scss/functions";
-
 @import "../../../../node_modules/bootstrap/scss/variables";
-@import "../../../../node_modules/bootstrap/scss/mixins";
 
 $primary: $indigo-600;
 $light: $gray-700;
 $dark: $gray-100;
-$custom-theme-colors: ("primary": $primary, "light": $light, "dark": $dark);
+$custom-theme-colors: ("primary": $primary, "secondary": $secondary, "light": $light, "dark": $dark);
 $theme-colors: map.merge($theme-colors, $custom-theme-colors);
-
 $enable-shadows: true;
 $enable-responsive-font-sizes: true;
 $body-bg: $gray-800;
+$body-bg-shaded: shade-color($body-bg, 15%);
 $body-color: $gray-100;
 $link-color: color-contrast($body-bg, $indigo-200, $indigo-800);
-$link-hover-color: tint-color($link-color, 15%);
+$link-hover-color: tint-color($link-color, 10%);
 $table-hover-color: rgba($table-color, .5);
 $table-active-bg: rgba($table-hover-bg, .5);
 $table-dark-color: $gray-800;
 $table-dark-bg: $gray-100;
+
+$box-shadow:                  0 .25rem 0.5rem rgba($teal-200, .2);
+$box-shadow-sm:               0 .075rem .125rem rgba($teal-200, .2);
+$box-shadow-lg:               0 0.5rem 1.5rem rgba($teal-200, .2);
+$box-shadow-inset:            inset 0 1px 2px rgba($teal-200, .2);
 
 $yiq-text-dark: $gray-800;
 $yiq-text-light: $gray-100;
@@ -89,10 +92,48 @@ $kbd-bg: $gray-300;
 $kbd-color: $gray-900;
 $success: tint-color($green, 8%);
 $info: tint-color($cyan, 15%);
-$offcanvas-bg-color: shade-color(rgba($primary, .8), 30%);
+$offcanvas-bg-color: tint-color(rgba($primary, .8), 12%);
 $offcanvas-color: $body-color;
 
-@import "../../../../node_modules/bootstrap/scss/bootstrap";
+@import "../../../../node_modules/bootstrap/scss/mixins";
+@import "../../../../node_modules/bootstrap/scss/utilities";
+@import "../../../../node_modules/bootstrap/scss/helpers";
+@import "../../../../node_modules/bootstrap/scss/utilities/api";
+@import "../../../../node_modules/bootstrap/scss/root";
+@import "../../../../node_modules/bootstrap/scss/reboot";
+@import "../../../../node_modules/bootstrap/scss/type";
+@import "../../../../node_modules/bootstrap/scss/images";
+@import "../../../../node_modules/bootstrap/scss/containers";
+@import "../../../../node_modules/bootstrap/scss/grid";
+@import "../../../../node_modules/bootstrap/scss/tables";
+@import "../../../../node_modules/bootstrap/scss/forms";
+@import "../../../../node_modules/bootstrap/scss/buttons";
+@import "../../../../node_modules/bootstrap/scss/transitions";
+@import "../../../../node_modules/bootstrap/scss/dropdown";
+@import "../../../../node_modules/bootstrap/scss/button-group";
+@import "../../../../node_modules/bootstrap/scss/nav";
+@import "../../../../node_modules/bootstrap/scss/navbar";
+@import "../../../../node_modules/bootstrap/scss/card";
+//@import "../../../../node_modules/bootstrap/scss/accordion";
+//@import "../../../../node_modules/bootstrap/scss/breadcrumb";
+//@import "../../../../node_modules/bootstrap/scss/pagination";
+@import "../../../../node_modules/bootstrap/scss/badge";
+@import "../../../../node_modules/bootstrap/scss/alert";
+//@import "../../../../node_modules/bootstrap/scss/progress";
+//@import "../../../../node_modules/bootstrap/scss/list-group";
+@import "../../../../node_modules/bootstrap/scss/close";
+//@import "../../../../node_modules/bootstrap/scss/toasts";
+//@import "../../../../node_modules/bootstrap/scss/modal";
+@import "../../../../node_modules/bootstrap/scss/tooltip";
+//@import "../../../../node_modules/bootstrap/scss/popover";
+//@import "../../../../node_modules/bootstrap/scss/carousel";
+@import "../../../../node_modules/bootstrap/scss/spinners";
+@import "../../../../node_modules/bootstrap/scss/offcanvas";
+
+body {
+    min-height: 100vh;
+    background: repeating-linear-gradient(12deg, $body-bg, $body-bg 1em, $body-bg-shaded 1em, $body-bg-shaded 2em) !important;
+}
 
 .tag-expand {
     width: 2.0rem;
@@ -103,4 +144,8 @@ $offcanvas-color: $body-color;
     max-width: 30vw;
     min-width: 10rem;
     width: 12rem;
+}
+
+#wiki-viewer {
+    background: $body-bg;
 }
