--- a/aintnowiki/wiki/static/css/anw_theme.css
+++ b/aintnowiki/wiki/static/css/anw_theme.css
@@ -13,10 +13,10 @@
 }
 
 .link-secondary {
-  color: #6c757d;
+  color: #ca6510;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: #565e64;
+  color: #d58440;
 }
 
 .link-success {
@@ -413,7 +413,7 @@
 }
 
 .border-secondary {
-  border-color: #6c757d !important;
+  border-color: #ca6510 !important;
 }
 
 .border-success {
@@ -1242,7 +1242,7 @@
 }
 
 .text-secondary {
-  color: #6c757d !important;
+  color: #ca6510 !important;
 }
 
 .text-success {
@@ -1298,7 +1298,7 @@
 }
 
 .bg-secondary {
-  background-color: #6c757d !important;
+  background-color: #ca6510 !important;
 }
 
 .bg-success {
@@ -4745,7 +4745,7 @@
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
   --bs-primary: #520dc2;
-  --bs-secondary: #6c757d;
+  --bs-secondary: #ca6510;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
@@ -7654,34 +7654,34 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #ca6510;
+  border-color: #ca6510;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 .btn-secondary:hover {
-  color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
+  color: #000;
+  background-color: #d27c34;
+  border-color: #cf7428;
 }
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
-  color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+  color: #000;
+  background-color: #d27c34;
+  border-color: #cf7428;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.25rem rgba(172, 86, 14, 0.5);
 }
 .btn-check:checked + .btn-secondary, .btn-check:active + .btn-secondary, .btn-secondary:active, .btn-secondary.active, .show > .btn-secondary.dropdown-toggle {
-  color: #fff;
-  background-color: #565e64;
-  border-color: #51585e;
+  color: #000;
+  background-color: #d58440;
+  border-color: #cf7428;
 }
 .btn-check:checked + .btn-secondary:focus, .btn-check:active + .btn-secondary:focus, .btn-secondary:active:focus, .btn-secondary.active:focus, .show > .btn-secondary.dropdown-toggle:focus {
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.25rem rgba(172, 86, 14, 0.5);
 }
 .btn-secondary:disabled, .btn-secondary.disabled {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #ca6510;
+  border-color: #ca6510;
 }
 
 .btn-success {
@@ -7896,27 +7896,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
-  color: #6c757d;
-  border-color: #6c757d;
+  color: #ca6510;
+  border-color: #ca6510;
 }
 .btn-outline-secondary:hover {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #ca6510;
+  border-color: #ca6510;
 }
 .btn-check:focus + .btn-outline-secondary, .btn-outline-secondary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(108, 117, 125, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(202, 101, 16, 0.5);
 }
 .btn-check:checked + .btn-outline-secondary, .btn-check:active + .btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #ca6510;
+  border-color: #ca6510;
 }
 .btn-check:checked + .btn-outline-secondary:focus, .btn-check:active + .btn-outline-secondary:focus, .btn-outline-secondary:active:focus, .btn-outline-secondary.active:focus, .btn-outline-secondary.dropdown-toggle.show:focus {
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.25rem rgba(108, 117, 125, 0.5);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.25rem rgba(202, 101, 16, 0.5);
 }
 .btn-outline-secondary:disabled, .btn-outline-secondary.disabled {
-  color: #6c757d;
+  color: #ca6510;
   background-color: transparent;
 }
 
@@ -9168,12 +9168,12 @@ textarea.form-control-lg {
 }
 
 .alert-secondary {
-  color: #41464b;
-  background-color: #e2e3e5;
-  border-color: #d3d6d8;
+  color: #793d0a;
+  background-color: #f4e0cf;
+  border-color: #efd1b7;
 }
 .alert-secondary .alert-link {
-  color: #34383c;
+  color: #613108;
 }
 
 .alert-success {
@@ -9235,14 +9235,14 @@ textarea.form-control-lg {
   width: 1em;
   height: 1em;
   padding: 0.25em 0.25em;
-  color: #000;
-  background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
+  color: #CFCFCF;
+  background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23CFCFCF'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
   border: 0;
   border-radius: 0.25rem;
   opacity: 0.5;
 }
 .btn-close:hover {
-  color: #000;
+  color: #CFCFCF;
   text-decoration: none;
   opacity: 0.75;
 }
@@ -9423,10 +9423,10 @@ textarea.form-control-lg {
   max-width: 100%;
   color: #f8f9fa;
   visibility: hidden;
-  background-color: rgba(111, 54, 204, 0.824);
+  background-color: rgba(52, 58, 64, 0.8);
   background-clip: padding-box;
   outline: 0;
-  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  box-shadow: 0 0.5rem 1.5rem rgba(166, 233, 213, 0.4);
   transition: transform 0.3s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -9499,6 +9499,10 @@ textarea.form-control-lg {
 body {
   min-height: 100vh;
   background: repeating-linear-gradient(12deg, #343a40, #343a40 1em, #2c3136 1em, #2c3136 2em) !important;
+}
+
+.offcanvas {
+  background: repeating-linear-gradient(-78deg, rgba(52, 58, 64, 0.8), rgba(52, 58, 64, 0.8) 1em, rgba(33, 37, 41, 0.8) 1em, rgba(33, 37, 41, 0.8) 2em) !important;
 }
 
 .tag-expand {
