--- a/aintnowiki/wiki/static/scss/anw_theme.scss
+++ b/aintnowiki/wiki/static/scss/anw_theme.scss
@@ -124,7 +124,7 @@ $offcanvas-color: $body-color;
 @import "../../../../node_modules/bootstrap/scss/badge";
 @import "../../../../node_modules/bootstrap/scss/alert";
 //@import "../../../../node_modules/bootstrap/scss/progress";
-//@import "../../../../node_modules/bootstrap/scss/list-group";
+@import "../../../../node_modules/bootstrap/scss/list-group";
 @import "../../../../node_modules/bootstrap/scss/close";
 //@import "../../../../node_modules/bootstrap/scss/toasts";
 //@import "../../../../node_modules/bootstrap/scss/modal";
