--- a/aintnowiki/wiki/templates/wiki.html
+++ b/aintnowiki/wiki/templates/wiki.html
@@ -1,26 +1,12 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% if noindex %}
-    <meta name="robots" content="noindex">
-    {% endif %}
-    <title>{% block title %}{{ object.title|default:"Ain't no title" }}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/anw_theme.css' %}">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-            crossorigin="anonymous"></script>
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 
+{% block extra_head %}
+    <title>{% block title %}{{ object.title|default:"Ain't no title" }}{% endblock %}</title>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.js"></script>
     <script src="https://uicdn.toast.com/editor-plugin-uml/latest/toastui-editor-plugin-uml.min.js"></script>
-
     {% verbatim %}
     <script type="text/x-template" id="tag-template">
         <span class="badge badge-pill bg-secondary me-2" v-bind:title="tag.description"
@@ -122,7 +108,6 @@
 
         const object_data = parse_if_possible(document.getElementById('object-data').textContent);
         const umlOptions = {rendererURL: "{{ PLANTUML_RENDERER_URL }}"};
-        console.log("UML options", umlOptions);
 
         const {Editor} = toastui;
         const {uml} = Editor.plugin;
@@ -134,7 +119,7 @@
             viewerOptions: {
                 viewer: true,
                 usageStatistics: false,
-                plugins: [[uml, umlOptions]],
+                // plugins: [uml],
                 initialValue: object_data.content || ""
             },
             hideViewer: (object_data === "" || object_data === null
@@ -227,7 +212,9 @@
                     this.options.el = this.$refs.ToastUiViewer;
                     this.options.viewer = true;
                     this.options.usageStatistics = false;
+                    console.info("Init Viewer?");
                     this.viewer = new toastui.Editor(this.options);
+                    console.info("Done!");
                     this.isLoaded = true;
 
                     if (this.item !== undefined && this.item !== null) {
@@ -371,9 +358,9 @@
             }
         })
     </script>
-    <!--script src="{% static 'js/anw.js' %}"></script-->
-</head>
-<body>
+{% endblock %}
+
+{% block content %}
 <div class="container-fluid p-0" id="app">
     <nav class="navbar navbar-dark navbar-expand bg-primary sticky-top shadow">
         <div class="container-fluid">
@@ -522,5 +509,4 @@
         }
     });
 </script>
-</body>
-</html>
+{% endblock %}
