Re-add UML plugin

--- a/aintnowiki/wiki/templates/wiki.html
+++ b/aintnowiki/wiki/templates/wiki.html
@@ -120,7 +120,7 @@
             viewerOptions: {
                 viewer: true,
                 usageStatistics: false,
-                plugins: [uml],
+                plugins: [[uml, umlOptions]],
                 initialValue: object_data.content || ""
             },
             hideViewer: (object_data === "" || object_data === null
